# todos

./: .cursorrules  .editorconfig  .gitignore  Makefile  README.md  cursor_todo.md  docker-compose.yml  memo.md  package-lock.json  package.json  todo.code-workspace
backend/: db.py  main.py  pyproject.toml  requirements.txt  template.yaml  test_main.py
backend/app/: config.py  db.py  main.py
backend/app/api/: group.py  group_member.py  todo.py  todos.py  user.py  user_group.py
backend/app/models/: group.py  group_member.py  todo.py  user.py
backend/app/repositories/: dynamodb.py  group_member_repository.py  group_repository.py  mock_todo_repository.py  todo_repository.py  todos_repository.py  user_repository.py
backend/app/repositories/mocks/: groups.jsonl  todos.jsonl
backend/app/schemas/: common.py  error.py  group.py  group_member.py  response.py  todo.py  user.py
backend/app/services/: group_member_service.py  group_service.py  todo_service.py  todos_service.py  user_service.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_main.py  test_todo_api.py
backend/tests/integration/: test_group_api.py
backend/tests/unit/: test_todo_api.py
docs/: 01_dev_policy.md  01_はじめに.md  02_fastapi_openapi_typescript.md  03_security.md
frontend/: .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.workspace.ts
frontend/.storybook/: main.ts  preview.tsx  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  theme.ts
frontend/src/components/: BackToTopButton.stories.tsx  BackToTopButton.tsx  CreateGroup.tsx  DevLogContext.tsx  DevLogPanel.stories.tsx  DevLogPanel.tsx  Login.stories.tsx  Login.tsx  SelectGroup.tsx  TodoList.stories.tsx  TodoList.test.tsx  TodoList.tsx  UserRegister.tsx
frontend/src/hooks/api/: fetcher.ts  group.ts  group_member.ts  index.ts  openapiClient.ts  todo.ts  types.ts  useTodos.ts  user.ts
frontend/src/layouts/: AdminLayout.tsx
frontend/src/pages/: CreateGroup.tsx  Login.stories.tsx  Login.tsx  SelectGroup.tsx  TodoList.tsx  UserRegister.tsx  login.tsx  register.tsx  root.tsx  select-group.tsx
frontend/src/stores/: user.ts
frontend/src/types/: api.ts  schema.ts
infrastructure/: init_db.py
infrastructure/data/: groupmembers.jsonl  groups.jsonl  todos.jsonl  users.jsonl
infrastructure/tables/: groupmembers.json  groups.json  todos.json  users.json
(+3 files in other folders)
