[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "nak",email = "nak@home.local"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "boto3 (>=1.38.23,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.11"
mypy = "^1.15.0"
black = "^25.1.0"
httpx = "^0.28.1"

