[project]
name = "app"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
packages = [
  { include = "app" }
]
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "boto3 (>=1.38.25,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.12"
mypy = "^1.16.0"
boto3-stubs = "^1.38.25"
httpx = "^0.28.1"

