[project]
name = "app"
version = "0.1.0"
description = ""
requires-python = ">=3.11"
packages = [
  { include = "app" }
]
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "mangum (>=0.19.0,<0.20.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "boto3 (>=1.38.25,<2.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
ruff = "^0.11.12"
mypy = "^1.16.0"
boto3-stubs = "^1.38.25"
httpx = "^0.28.1"
datamodel-code-generator = "^0.30.1"

[tool.black]
line-length = 120
target-version = ['py311']

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["E", "F", "I"]
ignore = ["F401"]  # 未使用のimportを無視
fixable = ["ALL"]

[tool.mypy]
python_version = 3.11
exclude = "(^build/|^dist/|^tests/)"
ignore_missing_imports = true
strict = false
warn_unused_configs = true
show_error_codes = true
pretty = true

[tool.poetry.dependencies]
